update DESCRIPTION file, add "import(Rcpp)" to NAMESPACE, correct Rd examples, replace "std::cout" with "Rprintf" according to Writing R Extensions, pass through all R checks

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,5 +4,9 @@ export(DiagPlot)
 export(getYhat_bart)
 export(model_bart)
 export(predict_bart)
+import(Rcpp)
+import(MASS)
+import(graphics)
+import(mlogit)
 import(stats)
 useDynLib(GcompBART)
