--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,6 +8,7 @@ Maintainer: Your Name <your@email.com>
 Description: One paragraph description of what the package does as one or more full
          sentences.
 License: GPL (>= 2)
+Depends: R (>= 3.2.2), MASS, graphics, mlogit, stats
 Imports: Rcpp (>= 0.12.16)
 LinkingTo: Rcpp
 RoxygenNote: 6.1.1
