add import Rcpp

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(DiagPlot)
 export(getYhat_bart)
 export(model_bart)
 export(predict_bart)
+import(Rcpp)
 import(MASS)
 import(graphics)
 import(mlogit)
